Established database connection with visible.Server
- Renamed GigListingService to GigListingRepository
- Configured app secrets to protect database connection details
- Added documentation for clarity

--- a/visible/compose.yaml
+++ b/visible/compose.yaml
@@ -19,6 +19,8 @@
       - 8080:8080
     links:
       - visible-db
+    secrets:
+      - postgres_user_password
   
 secrets:
   postgres_user_password:
