--- a/visible/visible.client/tsconfig.app.json
+++ b/visible/visible.client/tsconfig.app.json
@@ -17,9 +17,9 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
+    "noUnusedLocals": false,              //RENABLE AFTER DEVELOPMENT
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": false,
 
     /* shadcn */
     "baseUrl": ".",
