--- a/visible/visible.client/tsconfig.app.json
+++ b/visible/visible.client/tsconfig.app.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "noImplicitAny": false,
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
@@ -16,9 +17,9 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
+    "noUnusedLocals": false,              //RENABLE AFTER DEVELOPMENT
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": false,
 
     /* shadcn */
     "baseUrl": ".",
