--- a/visible/compose.yaml
+++ b/visible/compose.yaml
@@ -1,6 +1,7 @@
 ﻿services:
 
-  visible-db: 
+  visible-db:
+    container_name: visible-db
     image: postgres
     ports:
       - 5431:5432
@@ -11,6 +12,7 @@
       - postgres_user_password
 
   visible.server:
+    container_name: visible.server
     image: visible.server
     build:
       context: .
@@ -23,8 +25,35 @@
       - visible-db
     secrets:
       - postgres_user_password
-  
+
+  visible.client:
+    container_name: visible.client
+    image: visible.client
+    build:
+      context: visible.client
+      dockerfile: Dockerfile
+    ports:
+      - 5173:5173
+    links:
+      - visible.server
+    secrets:
+      - visible.client.pem
+      - visible.client.key
+    develop:
+      watch:
+        - action: sync
+          path: ./visible.client/src
+          target: /app/src
+          initial_sync: true
+          ignore:
+            - node_modules
+        - action: rebuild
+          path: ./visible.client/package.json
+
 secrets:
   postgres_user_password:
     file: secrets/postgres_user_password
-    
+  visible.client.pem:
+    file: secrets/visible.client.pem
+  visible.client.key:
+    file: secrets/visible.client.key
