Used tagged version of mirrors-prettier

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,6 +22,6 @@ repos:
         description: CSharpier is an opinionated C# formatter inspired by Prettier.
 
   - repo: https://github.com/rbubley/mirrors-prettier
-    rev: "main" # Use the sha / tag you want to point at
+    rev: "v3.6.2" # Use the sha / tag you want to point at
     hooks:
       - id: prettier
