--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           command: apt-get update && apt-get install -y python3 python3-pip
       - run:
           name: Install pre-commit
-          command: pip3 install pre-commit
+          command: apt-get update && apt-get install pre-commit
       - run:
           name: Run pre-commit hooks
           command: pre-commit run --all-files
