--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,9 @@ jobs:
           name: Install Python 3 and pip
           command: apt-get update && apt-get install -y python3
       - run:
+          name: Install Node
+          command: apt-get update && apt-get install -y node
+      - run:
           name: Install pre-commit
           command: apt-get update && apt-get install -y pre-commit
       - run:
