--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           command: apt-get update && apt-get install -y python3
       - run:
           name: Install Node
-          command: apt-get update && apt-get install -y node
+          command: apt-get update && apt-get install -y nodejs npm
       - run:
           name: Install pre-commit
           command: apt-get update && apt-get install -y pre-commit
