--- a/visible/visible.client/package.json
+++ b/visible/visible.client/package.json
@@ -63,6 +63,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.9.2",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
@@ -71,6 +74,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "jsdom": "^27.1.0",
     "prettier": "^3.6.2",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
