--- a/visible/visible.client/package.json
+++ b/visible/visible.client/package.json
@@ -59,6 +59,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16",
     "vaul": "^1.1.2",
+    "vite-tsconfig-paths": "^5.1.4",
     "zod": "^4.1.12"
   },
   "devDependencies": {
