--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,20 @@ jobs:
       - run:
           name: Run pre-commit hooks
           command: pre-commit run --all-files
+  backend-tests:
+    docker:
+      - image: mcr.microsoft.com/dotnet/sdk:9.0
+    steps:
+      - checkout
+      - run:
+          name: Run C# tests
+          command: |
+            cd visible
+            dotnet restore visible.Tests/visible.Tests.csproj
+            dotnet test visible.Tests/visible.Tests.csproj
 
 workflows:
-  pre-commit-workflow:
+  verification-workflow:
     jobs:
       - pre-commit
+      - backend-tests
