--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,8 +8,8 @@ repos:
         always_run: true
         pass_filenames: false
         stages:
-          - pre-commit
-          - pre-push
+          - commit
+          - push
           - post-checkout
           - post-rewrite
         description: Install the .NET tools listed at .config/dotnet-tools.json.
@@ -20,8 +20,8 @@ repos:
         always_run: true
         pass_filenames: false
         stages:
-          - pre-commit
-          - pre-push
+          - commit
+          - push
           - post-checkout
           - post-rewrite
         description: Install npm packages
