Working on cookie deletion for signout

--- a/visible/compose.yaml
+++ b/visible/compose.yaml
@@ -26,6 +26,7 @@
       - postgres_user_password
       - jwtKey
       - jwtIssuer
+      - callback
 
   visible.client:
     container_name: visible.client
@@ -62,3 +63,5 @@ secrets:
     file: secrets/JwtKey
   jwtIssuer:
     file: secrets/JwtIssuer
+  callback:
+    file: secrets/callback
